--- a/MultihostAdapter/MultihostAdapter/MultihostAdapter.Electron.csproj
+++ b/MultihostAdapter/MultihostAdapter/MultihostAdapter.Electron.csproj
@@ -77,6 +77,8 @@
     <Content Include="dist\images\multi-adapter-demo.png" />
     <Content Include="dist\images\multi-host-adapter-x64.png" />
     <Content Include="dist\min\base.lib.min.js" />
+    <Content Include="dist\min\mithril.lib.min.js" />
+    <Content Include="dist\min\multihost-card-mithril.min.js" />
     <Content Include="dist\min\multihost-card-ng1.min.js" />
     <Content Include="dist\min\multihost-card-ng2.min.js" />
     <Content Include="dist\min\multihost-card-react.min.js" />
@@ -133,6 +135,7 @@
     <Content Include="lib\%40angular2\Rx.min.js" />
     <Content Include="lib\%40angular2\shim.min.js" />
     <Content Include="lib\%40angular2\zone.min.js" />
+    <Content Include="lib\mithril\mithril.js" />
     <Content Include="lib\react\react-dom.min.js" />
     <Content Include="lib\react\react.min.js" />
     <Content Include="lib\ui-bootstrap-tpls-1.1.1.min.js" />
@@ -165,6 +168,8 @@
     <Content Include="dist\fonts\regular\segoeui.svgz" />
     <Content Include="dist\fonts\regular\segoeui.ttf" />
     <Content Include="dist\fonts\regular\segoeui.woff" />
+    <Content Include="wwwroot\multihost-card-mithril\babelled\multihost-card-mithril-babel.js" />
+    <Content Include="wwwroot\multihost-card-mithril\modules\multihost-card-mithril.module.jsx" />
     <None Include="wwwroot\multihost-card-react\modules\multihost-card-react.module.jsx" />
     <Content Include="wwwroot\multihost-card-react\babelled\multihost-card-react-babel.js" />
     <Content Include="wwwroot\multihost-card-ng1\configs\multihost-card-ng1.config.js" />
