--- a/MultihostAdapter/MultihostAdapter/package.json
+++ b/MultihostAdapter/MultihostAdapter/package.json
@@ -37,6 +37,8 @@
     "reflect-metadata": "^0.1.8",
     "rxjs": "5.0.1",
     "zone.js": "^0.7.4",
+    "mithril": "0.2.5",
+    "gulp-msx": "0.4.0",
     "gulp": "3.9.1",
     "gulp-debug": "2.1.2",
     "gulp-plumber": "1.1.0",
@@ -48,6 +50,7 @@
     "babel-preset-react": "6.16.0",
     "babel-preset-es2015": "6.18.0",
     "babel-preset-stage-2": "6.18.0",
+    "babel-plugin-mjsx": "4.1.1",
     "del": "2.2.1",
     "gulp-uglify": "2.0.0",
     "gulp-html-to-js": "0.0.5",
