--- a/MultihostAdapter/MultihostAdapter/package.json
+++ b/MultihostAdapter/MultihostAdapter/package.json
@@ -39,6 +39,7 @@
     "zone.js": "^0.7.4",
     "mithril": "0.2.5",
     "gulp-msx": "0.4.0",
+    "vue": "2.1.10",
     "gulp": "3.9.1",
     "gulp-debug": "2.1.2",
     "gulp-plumber": "1.1.0",
@@ -47,10 +48,13 @@
     "gulp-cssmin": "0.1.7",
     "gulp-filter": "4.0.0",
     "gulp-babel": "6.1.2",
+    "gulp-vueify": "0.0.3",
     "babel-preset-react": "6.16.0",
     "babel-preset-es2015": "6.18.0",
     "babel-preset-stage-2": "6.18.0",
     "babel-plugin-mjsx": "4.1.1",
+    "babel-plugin-transform-runtime": "6.22.0",
+    "babel-plugin-transform-vue-jsx": "3.3.0",
     "del": "2.2.1",
     "gulp-uglify": "2.0.0",
     "gulp-html-to-js": "0.0.5",
